term_5/TM/lab_4/generated/GrammarGeneratingFileParser.java
// Generated from /Users/schrod/prog/ITMO/term_5/TM/lab_4/source/GrammarGeneratingFile.g4 by ANTLR 4.8
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarGeneratingFileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, WS=6, EMPTY=7, SKIPP=8, STRING=9, 
		CODE=10, PARAM=11, IDENTIFIER=12, LEXEM=13, GRAMMAR_NAME=14;
	public static final int
		RULE_root = 0, RULE_header = 1, RULE_rule_ = 2, RULE_variant = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "header", "rule_", "variant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'header'", "':'", "'|'", "'returns'", null, "'EMPTY'", 
			"'skip'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "WS", "EMPTY", "SKIPP", "STRING", 
			"CODE", "PARAM", "IDENTIFIER", "LEXEM", "GRAMMAR_NAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarGeneratingFile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarGeneratingFileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public InputGrammar grammar = new InputGrammar();
		public Token name;
		public HeaderContext header;
		public Rule_Context rule_;
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<Rule_Context> rule_() {
			return getRuleContexts(Rule_Context.class);
		}
		public Rule_Context rule_(int i) {
			return getRuleContext(Rule_Context.class,i);
		}
		public TerminalNode GRAMMAR_NAME() { return getToken(GrammarGeneratingFileParser.GRAMMAR_NAME, 0); }
		public TerminalNode LEXEM() { return getToken(GrammarGeneratingFileParser.LEXEM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(GrammarGeneratingFileParser.IDENTIFIER, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGeneratingFileVisitor ) return ((GrammarGeneratingFileVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(8);
			((RootContext)_localctx).name = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIFIER) | (1L << LEXEM) | (1L << GRAMMAR_NAME))) != 0)) ) {
				((RootContext)_localctx).name = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			 _localctx.grammar.setName((((RootContext)_localctx).name!=null?((RootContext)_localctx).name.getText():null)); 
			}
			setState(11);
			match(T__0);
			setState(15);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(12);
				((RootContext)_localctx).header = header();
				 _localctx.grammar.setHeader(((RootContext)_localctx).header.code); 
				}
			}

			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER || _la==LEXEM) {
				{
				{
				setState(17);
				((RootContext)_localctx).rule_ = rule_();
				 _localctx.grammar.addRule(((RootContext)_localctx).rule_._rule); 
				setState(19);
				match(T__0);
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public String code;
		public Token CODE;
		public TerminalNode CODE() { return getToken(GrammarGeneratingFileParser.CODE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGeneratingFileVisitor ) return ((GrammarGeneratingFileVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__1);
			setState(27);
			((HeaderContext)_localctx).CODE = match(CODE);
			 ((HeaderContext)_localctx).code =  ((HeaderContext)_localctx).CODE == null ? "" : (((HeaderContext)_localctx).CODE!=null?((HeaderContext)_localctx).CODE.getText():null).substring(1, (((HeaderContext)_localctx).CODE!=null?((HeaderContext)_localctx).CODE.getText():null).length() - 1); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_Context extends ParserRuleContext {
		public Rule _rule = new Rule();
		public Token LEXEM;
		public Token STRING;
		public Token IDENTIFIER;
		public Token PARAM;
		public VariantContext variant;
		public TerminalNode LEXEM() { return getToken(GrammarGeneratingFileParser.LEXEM, 0); }
		public List<TerminalNode> STRING() { return getTokens(GrammarGeneratingFileParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(GrammarGeneratingFileParser.STRING, i);
		}
		public TerminalNode SKIPP() { return getToken(GrammarGeneratingFileParser.SKIPP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(GrammarGeneratingFileParser.IDENTIFIER, 0); }
		public List<VariantContext> variant() {
			return getRuleContexts(VariantContext.class);
		}
		public VariantContext variant(int i) {
			return getRuleContext(VariantContext.class,i);
		}
		public List<TerminalNode> PARAM() { return getTokens(GrammarGeneratingFileParser.PARAM); }
		public TerminalNode PARAM(int i) {
			return getToken(GrammarGeneratingFileParser.PARAM, i);
		}
		public Rule_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).enterRule_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).exitRule_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGeneratingFileVisitor ) return ((GrammarGeneratingFileVisitor<? extends T>)visitor).visitRule_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule_Context rule_() throws RecognitionException {
		Rule_Context _localctx = new Rule_Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_rule_);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEXEM:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				((Rule_Context)_localctx).LEXEM = match(LEXEM);
				 _localctx._rule.setName((((Rule_Context)_localctx).LEXEM!=null?((Rule_Context)_localctx).LEXEM.getText():null)); 
				setState(32);
				match(T__2);
				setState(47);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					{
					setState(33);
					((Rule_Context)_localctx).STRING = match(STRING);
					setState(34);
					match(SKIPP);
					 _localctx._rule.addVariant(new Lexeme((((Rule_Context)_localctx).STRING!=null?((Rule_Context)_localctx).STRING.getText():null).substring(1, (((Rule_Context)_localctx).STRING!=null?((Rule_Context)_localctx).STRING.getText():null).length() - 1), true)); 
					}
					}
					break;
				case 2:
					{
					{
					{
					setState(36);
					((Rule_Context)_localctx).STRING = match(STRING);
					 _localctx._rule.addVariant(new Lexeme((((Rule_Context)_localctx).STRING!=null?((Rule_Context)_localctx).STRING.getText():null).substring(1, (((Rule_Context)_localctx).STRING!=null?((Rule_Context)_localctx).STRING.getText():null).length() - 1), false)); 
					}
					setState(44);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__3) {
						{
						{
						setState(39);
						match(T__3);
						setState(40);
						((Rule_Context)_localctx).STRING = match(STRING);
						 _localctx._rule.addVariant(new Lexeme((((Rule_Context)_localctx).STRING!=null?((Rule_Context)_localctx).STRING.getText():null).substring(1, (((Rule_Context)_localctx).STRING!=null?((Rule_Context)_localctx).STRING.getText():null).length() - 1), false)); 
						}
						}
						setState(46);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				}
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				((Rule_Context)_localctx).IDENTIFIER = match(IDENTIFIER);
				 _localctx._rule.setName((((Rule_Context)_localctx).IDENTIFIER!=null?((Rule_Context)_localctx).IDENTIFIER.getText():null)); 
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PARAM) {
					{
					setState(51);
					((Rule_Context)_localctx).PARAM = match(PARAM);
					 _localctx._rule.parseParams(((Rule_Context)_localctx).PARAM == null ? "" : (((Rule_Context)_localctx).PARAM!=null?((Rule_Context)_localctx).PARAM.getText():null).substring(1, (((Rule_Context)_localctx).PARAM!=null?((Rule_Context)_localctx).PARAM.getText():null).length() - 1)); 
					}
				}

				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__4) {
					{
					setState(55);
					match(T__4);
					setState(56);
					((Rule_Context)_localctx).PARAM = match(PARAM);
					 _localctx._rule.parseReturns(((Rule_Context)_localctx).PARAM == null ? "" : (((Rule_Context)_localctx).PARAM!=null?((Rule_Context)_localctx).PARAM.getText():null).substring(1, (((Rule_Context)_localctx).PARAM!=null?((Rule_Context)_localctx).PARAM.getText():null).length() - 1)); 
					}
				}

				setState(60);
				match(T__2);
				setState(61);
				((Rule_Context)_localctx).variant = variant();
				 _localctx._rule.addVariant(((Rule_Context)_localctx).variant._variant); 
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(63);
					match(T__3);
					setState(64);
					((Rule_Context)_localctx).variant = variant();
					 _localctx._rule.addVariant(((Rule_Context)_localctx).variant._variant); 
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariantContext extends ParserRuleContext {
		public Variant _variant = new Variant();
		public Token CODE;
		public Token name;
		public Token PARAM;
		public TerminalNode EMPTY() { return getToken(GrammarGeneratingFileParser.EMPTY, 0); }
		public List<TerminalNode> CODE() { return getTokens(GrammarGeneratingFileParser.CODE); }
		public TerminalNode CODE(int i) {
			return getToken(GrammarGeneratingFileParser.CODE, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(GrammarGeneratingFileParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(GrammarGeneratingFileParser.IDENTIFIER, i);
		}
		public List<TerminalNode> LEXEM() { return getTokens(GrammarGeneratingFileParser.LEXEM); }
		public TerminalNode LEXEM(int i) {
			return getToken(GrammarGeneratingFileParser.LEXEM, i);
		}
		public List<TerminalNode> PARAM() { return getTokens(GrammarGeneratingFileParser.PARAM); }
		public TerminalNode PARAM(int i) {
			return getToken(GrammarGeneratingFileParser.PARAM, i);
		}
		public VariantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).enterVariant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGeneratingFileListener ) ((GrammarGeneratingFileListener)listener).exitVariant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarGeneratingFileVisitor ) return ((GrammarGeneratingFileVisitor<? extends T>)visitor).visitVariant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariantContext variant() throws RecognitionException {
		VariantContext _localctx = new VariantContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variant);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EMPTY:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(EMPTY);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(75);
					((VariantContext)_localctx).CODE = match(CODE);
					}
				}

				 _localctx._variant.addChild("", "", ((VariantContext)_localctx).CODE == null ? "" : (((VariantContext)_localctx).CODE!=null?((VariantContext)_localctx).CODE.getText():null).substring(1, (((VariantContext)_localctx).CODE!=null?((VariantContext)_localctx).CODE.getText():null).length() - 1)); 
				}
				break;
			case IDENTIFIER:
			case LEXEM:
				enterOuterAlt(_localctx, 2);
				{
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(84);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IDENTIFIER:
						{
						setState(79);
						((VariantContext)_localctx).name = match(IDENTIFIER);
						setState(81);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==PARAM) {
							{
							setState(80);
							((VariantContext)_localctx).PARAM = match(PARAM);
							}
						}

						}
						break;
					case LEXEM:
						{
						setState(83);
						((VariantContext)_localctx).name = match(LEXEM);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==CODE) {
						{
						setState(86);
						((VariantContext)_localctx).CODE = match(CODE);
						}
					}


					        _localctx._variant.addChild((((VariantContext)_localctx).name!=null?((VariantContext)_localctx).name.getText():null), ((VariantContext)_localctx).PARAM == null ? "" : (((VariantContext)_localctx).PARAM!=null?((VariantContext)_localctx).PARAM.getText():null).substring(1, (((VariantContext)_localctx).PARAM!=null?((VariantContext)_localctx).PARAM.getText():null).length() - 1), ((VariantContext)_localctx).CODE == null ? "" : (((VariantContext)_localctx).CODE!=null?((VariantContext)_localctx).CODE.getText():null).substring(1, (((VariantContext)_localctx).CODE!=null?((VariantContext)_localctx).CODE.getText():null).length() - 1));
					     
					}
					}
					setState(92); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER || _la==LEXEM );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}